adjust config file and network_test bash

--- a/configs/conf_classic_1/1.conf
+++ b/configs/conf_classic_1/1.conf
@@ -7,10 +7,19 @@ protocol device {
         scan time 60;  
 		interface "a_*";    
 };
+filter prefix_32_exclude
+{
+	# if prefix.len == 32 then reject;
+        if (net.len = 32) then { 
+		reject;
+	}
+	accept;
+}
 protocol kernel {
     scan time 60;
 	ipv4 { 
-		export all; 
+		export filter prefix_32_exclude;
+                #export all; 
 		import all; 
 	};
 	learn;
