--- a/configs/conf_classic_1/4.conf
+++ b/configs/conf_classic_1/4.conf
@@ -2,10 +2,18 @@ router id 10.0.4.2;
 protocol device {
         scan time 60;      
 };
+filter prefix_32_exclude
+{
+        # if prefix.len == 32 then reject;
+        if (net.len = 32) then {
+                reject;
+        }
+        accept;
+}
 protocol kernel {
     scan time 60;
 	ipv4 { 
-		export all; 
+		export filter prefix_32_exclude; 
 		import all; 
 	};
 	learn;
