--- a/configs/conf_classic_1/5.conf
+++ b/configs/conf_classic_1/5.conf
@@ -2,10 +2,19 @@ router id 10.0.5.2;
 protocol device {
         scan time 60;      
 };
+filter prefix_32_exclude
+{
+        # if prefix.len == 32 then reject;
+        if (net.len = 32) then {
+                reject;
+        }
+        accept;
+}
 protocol kernel {
     scan time 60;
 	ipv4 { 
-		export all; 
+		export filter prefix_32_exclude;
+		# export all; 
 		import all; 
 	};
 	learn;
