rpki build automate

--- a/configs/conf_classic_1_with_roa/1.conf
+++ b/configs/conf_classic_1_with_roa/1.conf
@@ -8,7 +8,7 @@ roa4 table r4{
 
 protocol device {
     scan time 60;  
-		interface "a_*";    
+    interface "eth_1_*";    
 };
 protocol kernel {
     scan time 60;
@@ -21,12 +21,12 @@ protocol kernel {
 };
 protocol direct {
 	ipv4;
-  	interface "a_*";
+  	interface "eth_1_*";
 };
 protocol rpki rpki1
 {
 	
-   	debug all;
+    debug all;
     roa4 { table r4; };
     # roa6 { table r6; };
     remote 10.0.8.1 port 3323;
@@ -62,7 +62,7 @@ protocol bgp savbgp_ab from sav_inter{
 	local role customer;
 	source address 10.0.1.1;
 	neighbor 10.0.1.2  as 65504;
-	interface "a_b";
+	interface "eth_1_2";
 	direct; 
 };
 
@@ -72,6 +72,6 @@ protocol bgp savbgp_ac from sav_inter{
 	# local role peer;
 	source address 10.0.2.1;
 	neighbor 10.0.2.2  as 65505;
-	interface "a_c";
+	interface "eth_1_3";
 	direct; 
 };
