--- a/configs/conf_classic_1_with_roa/3.conf
+++ b/configs/conf_classic_1_with_roa/3.conf
@@ -2,6 +2,9 @@ router id 10.0.2.2;
 protocol device {
     scan time 60;      
 };
+roa4 table r4{
+        sorted 1;
+};
 protocol kernel {
     scan time 60;
 	ipv4 { 
@@ -14,6 +17,15 @@ protocol kernel {
 protocol direct {
 	ipv4;
   	interface "*";
+};
+protocol rpki rpki1
+{
+
+    debug all;
+    roa4 { table r4; };
+    # roa6 { table r6; };
+    remote 10.0.8.1 port 3323;
+    retry 1;
 };
 protocol static {
 	ipv4 { 
@@ -44,13 +56,13 @@ protocol bgp savbgp_ca from sav_inter{
 	# local role peer;
 	source address 10.0.2.2;
 	neighbor 10.0.2.1 as 65501;
-	interface "c_a";
+	interface "eth_3_1";
 };
 
 protocol bgp savbgp_cb from sav_inter{
 	local role customer;
 	source address 10.0.6.2;
 	neighbor 10.0.6.1 as 65504;
-	interface "c_b";
+	interface "eth_3_2";
 	description "modified BGP between node C and B";
 };
