--- a/configs/conf_classic_1_with_roa/5.conf
+++ b/configs/conf_classic_1_with_roa/5.conf
@@ -1,4 +1,7 @@
 router id 10.0.5.2;
+roa4 table r4{
+        sorted 1;
+};
 protocol device {
     scan time 60;      
 };
@@ -14,6 +17,15 @@ protocol kernel {
 protocol direct {
 	ipv4;
   	interface "*";
+};
+protocol rpki rpki1
+{
+
+    debug all;
+    roa4 { table r4; };
+    # roa6 { table r6; };
+    remote 10.0.8.1 port 3323;
+    retry 1;
 };
 protocol static {
 	ipv4 { 
@@ -42,7 +54,7 @@ protocol bgp savbgp_eb from inter{
 	local role provider;
 	source address 10.0.5.2;
 	neighbor 10.0.5.1  as 65504;
-	interface "e_b";
+	interface "eth_5_2";
 	description "modified BGP between node E and B";
 };
 
@@ -50,7 +62,7 @@ protocol bgp savbgp_ed from inter{
 	local role peer;
 	source address 10.0.7.2;
 	neighbor 10.0.7.1  as 65502;
-	interface "e_d";
+	interface "eth_5_4";
 	direct; 
 	description "modified BGP between node E and D";
 };
