--- a/configs/conf_classic_1_with_roa/2.conf
+++ b/configs/conf_classic_1_with_roa/2.conf
@@ -2,6 +2,9 @@ router id 10.0.1.2;
 protocol device {
     scan time 60;      
 };
+roa4 table r4{
+        sorted 1;
+};
 protocol kernel {
     scan time 60;
 	ipv4 { 
@@ -14,6 +17,15 @@ protocol kernel {
 protocol direct {
 	ipv4;
   	interface "*";
+};
+protocol rpki rpki1
+{
+
+    # debug all;
+    roa4 { table r4; };
+    # roa6 { table r6; };
+    remote 10.0.8.1 port 3323;
+    retry 1;
 };
 protocol static {
 	ipv4 { 
@@ -45,7 +57,7 @@ protocol bgp savbgp_ba from sav_inter{
 	local role provider;
 	source address 10.0.1.2;
 	neighbor 10.0.1.1  as 65501;
-	interface "b_a";
+	interface "eth_2_1";
 };
 
 
@@ -53,7 +65,7 @@ protocol bgp savbgp_bc from sav_inter{
 	local role provider;
 	source address 10.0.6.1;
 	neighbor 10.0.6.2  as 65505;
-	interface "b_c";
+	interface "eth_2_3";
 	description "modified BGP between node B and C";
 };
 
@@ -61,7 +73,7 @@ protocol bgp savbgp_be from sav_inter{
 	local role customer;
 	source address 10.0.5.1;
 	neighbor 10.0.5.2  as 65503;
-	interface "b_e";
+	interface "eth_2_5";
 	description "modified BGP between node B and E";
 };
 
@@ -70,6 +82,6 @@ protocol bgp savbgp_bd from sav_inter{
 	local role customer;
 	source address 10.0.4.1;
 	neighbor 10.0.4.2  as 65502;
-	interface "b_d";
+	interface "eth_2_4";
 	description "modified BGP between node B and D";
 };
