--- a/configs/conf_classic_1_with_roa/4.conf
+++ b/configs/conf_classic_1_with_roa/4.conf
@@ -1,4 +1,7 @@
 router id 10.0.4.2;
+roa4 table r4{
+        sorted 1;
+};
 protocol device {
     scan time 60;      
 };
@@ -14,6 +17,15 @@ protocol kernel {
 protocol direct {
 	ipv4;
   	interface "*";
+};
+protocol rpki rpki1
+{
+
+    debug all;
+    roa4 { table r4; };
+    # roa6 { table r6; };
+    remote 10.0.8.1 port 3323;
+    retry 1;
 };
 protocol static {
 	ipv4 { 
@@ -32,7 +44,7 @@ template bgp inter_db from inter{
 	local role provider;
 	source address 10.0.4.2;
 	neighbor 10.0.4.1  as 65504;
-	interface "d_b";
+	interface "eth_4_2";
 	direct;
 };
 
@@ -54,7 +66,7 @@ template bgp inter_de from inter{
 	local role peer;
 	source address 10.0.7.1;
 	neighbor 10.0.7.2 as 65503;
-	interface "d_e";
+	interface "eth_4_5";
 	direct;
 };
 
