netmode with roa overgit status

--- a/docker_compose/docker_compose_classic_1_with_roa.yml
+++ b/docker_compose/docker_compose_classic_1_with_roa.yml
@@ -90,10 +90,15 @@ services:
     cap_add:
       - NET_ADMIN
     volumes:
+      #- ./krill/krill:/root/.cargo/bin/krill
+      #- ./krill/krillc:/root/.cargo/bin/krillc
+      #- ./krill/krillup:/root/.cargo/bin/krillup
       - ./configs/krill/krill.conf:/var/krill/data/krill.conf
       - ./configs/krill/rsyncd.conf:/etc/rsyncd.conf
       - ./configs/krill/keys/web/cert.pem:/var/krill/data/ssl/cert.pem
       - ./configs/krill/keys/web/key.pem:/var/krill/data/ssl/key.pem
+      - ./configs/krill/add_roas.py:/var/krill/add_roas.py
+      - ./configs/krill/roas.json:/var/krill/roas.json
       - ./krill_data:/var/krill/data
       - ./krill.sh:/var/krill/start.sh
       - ./logs/krill.log:/var/krill/logs/krill.log
