Separate mounting of SQLite data directory

--- a/docker_compose/docker_compose_classic_1_with_roa.yml
+++ b/docker_compose/docker_compose_classic_1_with_roa.yml
@@ -8,7 +8,8 @@ services:
     volumes: 
       - ./configs/1.conf:/usr/local/etc/bird.conf
       - ./configs/1.json:/root/savop/SavAgent_config.json
-      - ./logs/1/:/root/savop/logs/
+      - ./logs/1/logs:/root/savop/logs/
+      - ./logs/1/data:/root/savop/extend_server/data/
     network_mode: none
     command: 
         bash container_run.sh
@@ -20,7 +21,8 @@ services:
     volumes: 
       - ./configs/2.conf:/usr/local/etc/bird.conf
       - ./configs/2.json:/root/savop/SavAgent_config.json
-      - ./logs/2/:/root/savop/logs/
+      - ./logs/2/logs:/root/savop/logs/
+      - ./logs/2/data:/root/savop/extend_server/data/
     network_mode: none
     command:
         bash container_run.sh
@@ -32,7 +34,8 @@ services:
     volumes: 
       - ./configs/3.conf:/usr/local/etc/bird.conf
       - ./configs/3.json:/root/savop/SavAgent_config.json
-      - ./logs/3/:/root/savop/logs/
+      - ./logs/3/logs:/root/savop/logs/
+      - ./logs/3/data:/root/savop/extend_server/data/
     network_mode: none
     command:
         bash container_run.sh
@@ -44,7 +47,8 @@ services:
     volumes: 
       - ./configs/4.conf:/usr/local/etc/bird.conf
       - ./configs/4.json:/root/savop/SavAgent_config.json
-      - ./logs/4/:/root/savop/logs/
+      - ./logs/4/logs:/root/savop/logs/
+      - ./logs/4/data:/root/savop/extend_server/data/
     network_mode: none
     command:
         bash container_run.sh
@@ -56,7 +60,8 @@ services:
     volumes: 
       - ./configs/5.conf:/usr/local/etc/bird.conf
       - ./configs/5.json:/root/savop/SavAgent_config.json
-      - ./logs/5/:/root/savop/logs/
+      - ./logs/5/logs:/root/savop/logs/
+      - ./logs/5/data:/root/savop/extend_server/data/
     network_mode: none
     command:
         bash container_run.sh
