add the config files of the classic_2 and classic_2_Strict_uRPF_2N networking node

--- a/configs/conf_classic_2_Strict_uRPF_2N/1.conf
+++ b/configs/conf_classic_2_Strict_uRPF_2N/1.conf
@@ -49,14 +49,14 @@ template bgp sav_inter from basic{
 	};
 };
 
-#protocol bgp savbgp_1_2 from sav_inter{
-#	local role customer;
-#	source address 10.0.1.1;
-#	neighbor 10.0.1.2  as 65502;
-#	interface "eth_1_2";
-#	direct;
-#        description "modified BGP between node 1 and 2"; 
-#};
+protocol bgp savbgp_1_2 from basic{
+	local role customer;
+	source address 10.0.1.1;
+	neighbor 10.0.1.2  as 65502;
+	interface "eth_1_2";
+	direct;
+        description "modified BGP between node 1 and 2"; 
+};
 
 protocol bgp savbgp_1_4 from sav_inter{
 	local role customer;
