--- a/configs/conf_classic_2_Strict_uRPF_2N/2.conf
+++ b/configs/conf_classic_2_Strict_uRPF_2N/2.conf
@@ -44,19 +44,18 @@ template bgp sav_inter from basic{
 	};
 };
 
-protocol bgp savbgp_2_1 from sav_inter{
-        description "modified BGP between node 2 and 1";
+protocol bgp savbgp_2_1 from basic{
         local role provider;
         source address 10.0.1.2;
         neighbor 10.0.1.1 as 65501;
         interface "eth_2_1";
+        description "modified BGP between node 2 and 1";
 };
 
-protocol bgp savbgp_2_4 from sav_inter{
-	description "modified BGP between node 2 and 4";
+protocol bgp savbgp_2_4 from basic{
 	local role customer;
 	source address 10.0.3.1;
 	neighbor 10.0.3.2 as 65504;
 	interface "eth_2_4";
-	
+	description "modified BGP between node 2 and 4";
 };
