update json config

--- a/configs/conf_classic_2_Strict_uRPF_2N/1.conf
+++ b/configs/conf_classic_2_Strict_uRPF_2N/1.conf
@@ -31,15 +31,24 @@ protocol static {
 	route 192.168.1.0/24 blackhole;
 	route 192.168.6.0/24 blackhole;
 };
+filter no_export_1_2 {
+	if (net = 192.168.1.0/24)
+	 then {
+	bgp_community.add((0xFFFF, 0xFF01)); 
+  }
+  accept;
+};
+filter no_export_1_4 {
+	if (net = 192.168.6.0/24)
+	 then {
+	bgp_community.add((0xFFFF, 0xFF01)); 
+  }
+  accept;
+};
 template bgp basic {
 	local as 65501;
 	long lived graceful restart on;
 	debug all;
-	ipv4{
-		export all;
-		import all;
-		import table on;
-	};
 	enable extended messages ;
 }
 template bgp sav_inter from basic{
@@ -55,7 +64,12 @@ protocol bgp savbgp_1_2 from basic{
 	neighbor 10.0.1.2  as 65502;
 	interface "eth_1_2";
 	direct;
-        description "modified BGP between node 1 and 2"; 
+    description "modified BGP between node 1 and 2"; 
+	ipv4{
+		export filter no_export_1_2;
+		import all;
+		import table on;
+	};
 };
 
 protocol bgp savbgp_1_4 from sav_inter{
@@ -64,5 +78,10 @@ protocol bgp savbgp_1_4 from sav_inter{
 	neighbor 10.0.2.2  as 65504;
 	interface "eth_1_4";
 	direct;
-        description "modified BGP between node 1 and 4";
+    description "modified BGP between node 1 and 4";
+		ipv4{
+		export filter no_export_1_4;
+		import all;
+		import table on;
+	};
 };
