--- a/configs/conf_classic_2_Strict_uRPF_2N/1.conf
+++ b/configs/conf_classic_2_Strict_uRPF_2N/1.conf
@@ -31,19 +31,24 @@ protocol static {
 	route 192.168.1.0/24 blackhole;
 	route 192.168.6.0/24 blackhole;
 };
-filter no_export_1_2 {
+filter import_1_2 {
 	if (net = 192.168.1.0/24)
 	 then {
 	bgp_community.add((0xFFFF, 0xFF01)); 
   }
   accept;
 };
-filter no_export_1_4 {
+filter export_1_4 {
 	if (net = 192.168.6.0/24)
 	 then {
 	bgp_community.add((0xFFFF, 0xFF01)); 
   }
   accept;
+};
+filter import_1_4 {
+	if (net != 192.168.4.0/24)
+	 then {accept;
+  }
 };
 template bgp basic {
 	local as 65501;
@@ -66,7 +71,7 @@ protocol bgp savbgp_1_2 from basic{
 	direct;
     description "modified BGP between node 1 and 2"; 
 	ipv4{
-		export filter no_export_1_2;
+		export filter import_1_2;
 		import all;
 		import table on;
 	};
@@ -80,8 +85,8 @@ protocol bgp savbgp_1_4 from sav_inter{
 	direct;
     description "modified BGP between node 1 and 4";
 		ipv4{
-		export filter no_export_1_4;
-		import all;
+		export filter export_1_4;
+		import filter import_1_4;
 		import table on;
 	};
 };
