remove P6 on eth1_2

--- a/configs/conf_classic_2_Strict_uRPF_2N/1.conf
+++ b/configs/conf_classic_2_Strict_uRPF_2N/1.conf
@@ -31,12 +31,9 @@ protocol static {
 	route 192.168.1.0/24 blackhole;
 	route 192.168.6.0/24 blackhole;
 };
-filter import_1_2 {
-	if (net = 192.168.1.0/24)
-	 then {
-	bgp_community.add((0xFFFF, 0xFF01)); 
-  }
-  accept;
+filter export_1_2 {
+	if (net = 192.168.1.0/24) then bgp_community.add((0xFFFF, 0xFF01)); 
+  	if (net != 192.168.6.0/24) then accept;
 };
 filter export_1_4 {
 	if (net = 192.168.6.0/24)
@@ -44,11 +41,6 @@ filter export_1_4 {
 	bgp_community.add((0xFFFF, 0xFF01)); 
   }
   accept;
-};
-filter import_1_4 {
-	if (net != 192.168.4.0/24)
-	 then {accept;
-  }
 };
 template bgp basic {
 	local as 65501;
@@ -71,7 +63,7 @@ protocol bgp savbgp_1_2 from basic{
 	direct;
     description "modified BGP between node 1 and 2"; 
 	ipv4{
-		export filter import_1_2;
+		export filter export_1_2;
 		import all;
 		import table on;
 	};
@@ -86,7 +78,7 @@ protocol bgp savbgp_1_4 from sav_inter{
     description "modified BGP between node 1 and 4";
 		ipv4{
 		export filter export_1_4;
-		import filter import_1_4;
+		import all;
 		import table on;
 	};
 };
