modify node_1 filter

--- a/configs/conf_classic_2_Strict_uRPF_2N/1.conf
+++ b/configs/conf_classic_2_Strict_uRPF_2N/1.conf
@@ -34,6 +34,7 @@ protocol static {
 filter export_1_2 {
 	if (net = 192.168.1.0/24) then bgp_community.add((0xFFFF, 0xFF01)); 
   	if (net != 192.168.6.0/24) then accept;
+	else reject;
 };
 filter export_1_4 {
 	if (net = 192.168.6.0/24)
